--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/idPBLoading"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_centerInParent="true"
         />
     <RelativeLayout
@@ -31,7 +31,7 @@
             android:id="@+id/idTVCityName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:padding="20dp"
             android:text="City Name"
@@ -49,6 +49,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:id="@+id/idTILCity"
                 android:layout_margin="10dp"
                 android:layout_weight="4.5"
@@ -57,6 +58,7 @@
                 android:padding="5dp"
                 app:hintTextColor="@color/white"
                 android:textColorHint="@color/white"
+                app:boxStrokeColor="@android:color/transparent"
                 >
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -68,16 +70,17 @@
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:background="@android:color/transparent"/>
-            </com.google.android.material.textfield.TextInputLayout>
-            <ImageView
-                android:id="@+id/idIVSearch"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:layout_weight="8.5"
-                android:background="@android:color/transparent"
-                android:src ="@drawable/ic_search"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <ImageView
+            android:id="@+id/idIVSearch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_weight="8.5"
+            app:tint="@color/white"
+            android:background="@android:color/transparent"
+            android:src ="@drawable/ic_search"/>
         </LinearLayout>
 
         <TextView
@@ -90,7 +93,7 @@
             android:padding="5dp"
             android:text="23"
             android:textColor="@color/white"
-            android:textSize="78dp" />
+            android:textSize="70dp" />
         <ImageView
             android:id="@+id/idIVIcon"
             android:layout_width="wrap_content"
